ENH: Fixed Color Issue in Dark Mode

--- a/docs/.vitepress/theme/colors.css
+++ b/docs/.vitepress/theme/colors.css
@@ -10,8 +10,7 @@
 
 /* These settings are for the sponsor theme used in actions */
     --vp-c-sponsor: #1318B9;
-    --vp-c-text-2: #1318B9;
-    --vp-button-sponsor-bg: #b1feba;
+    --vp-button-sponsor-bg: #B2FEB9;
     --vp-button-sponsor-hover-bg: #b1e9fe;
     --vp-button-sponsor-active-bg: #b1feba;
 
